<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="@drawable/starrynight2">


    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/strUserName"
              android:textColor="#ffffff"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"/>



    <EditText android:id="@+id/etUsername"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
            android:inputType="text"
            android:width="150dp"
              android:background="#ffc7b6ff"
              android:layout_marginBottom="10dp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/strEmail"
              android:textColor="#ffffff"
              android:textSize="15sp"
              android:layout_marginBottom="10dp"/>

    <EditText android:id="@+id/etEmail"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:inputType="textEmailAddress"
              android:width="150dp"
              android:background="#ffc7b6ff"
              android:layout_marginBottom="10dp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/strPassword"
              android:textColor="#ffffff"
              android:textSize="15sp"
              android:layout_marginBottom="10dp"/>

    <EditText
            android:id="@+id/pwd"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:width="150dp"
              android:background="#ffc7b6ff"
              android:layout_marginBottom="10dp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/strConfirmPassword"
              android:textColor="#ffffff"
              android:textSize="15sp"
              android:layout_marginBottom="10dp"/>

    <EditText
            android:id="@+id/confirmpwd"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:width="150dp"
              android:background="#ffc7b6ff"
              android:layout_marginBottom="10dp"/>

    <CheckBox android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/strshowPass"
              android:textColor="#ffffff"
              android:clickable="true"
              android:textSize="15sp"
              android:layout_marginBottom="10dp"
              android:id="@+id/checkpwd"


              />

    <Button android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="#ffffff"

            android:background="@drawable/register_button"/>
    </LinearLayout>